--- a/angular.json
+++ b/angular.json
@@ -48,7 +48,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/assets/",
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
